feature: More querys
